third_party/move/move-compiler-v2/tests/checking/typing/vector_mismatched_args_non_base_type.exp

Diagnostics:
error: reference type `&mut u64` is not allowed as a type argument
  ┌─ tests/checking/typing/vector_mismatched_args_non_base_type.move:7:16
  │
7 │         vector<&mut u64>[&0];
  │                ^^^^^^^^
  │
  = required by instantiating vector type parameter

error: expected `&mut u64` but found a value of type `&u64` (mutability mismatch)
  ┌─ tests/checking/typing/vector_mismatched_args_non_base_type.move:7:26
  │
7 │         vector<&mut u64>[&0];
  │                          ^^

error: expected 0 items but found 2
  ┌─ tests/checking/typing/vector_mismatched_args_non_base_type.move:8:20
  │
8 │         vector[(), (0, 1)];
  │                    ^^^^^^
